View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025504 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-11-20 10:25 | 2015-05-14 15:33 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025504: Exception raised during projection curve on surface | ||||
Description | The exception in ProjLib_CompProjectedCurve is raised while projecting the curve on surface (see attached) | ||||
Steps To Reproduce | restore surf s restore curve c project c2d c s Observed result: An exception was caught 6281FDA4 : StdFail_NotDone: ProjLib CompProjectedCurve Not Done ** Exception ** 6281FDA4 : StdFail_NotDone: ProjLib CompProjectedCurve Not Done | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(013) bug25504 | ||||
2014-11-20 10:25 administrator |
surf (215 bytes) |
2014-11-20 10:25 administrator |
curve (333 bytes) |
|
Branch CR25504 has been created by azv. SHA-1: 95d5ee6e0d077c977c9bd3d01723f36818fcfcff Detailed log of new commits: Author: azv Date: Wed Nov 19 17:19:11 2014 +0300 0025504: Exception raised during projection curve on surface Avoid moving of projected point to a boundary of surface |
|
Branch CR25504 is ready for review |
|
Ok |
|
Dear BugMaster, Branch CR25504 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 95d5ee6e0d077c977c9bd3d01723f36818fcfcff Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests.nnov.opencascade.com/CR25504-master-occt/Debian60-64/bugs/moddata_3/bug25504.html http://occt-tests.nnov.opencascade.com/CR25504-master-occt/Windows-32-VC10/bugs/moddata_3/bug25504.html bugs moddata_3(013) bug25504: OK Testing on Linux: occt component : Total MEMORY difference: 358430036 / 358093264 Total CPU difference: 47686.89000000004 / 47953.899999999994 products component : Total MEMORY difference: 112219296 / 112063348 Total CPU difference: 15897.789999999972 / 16960.27999999997 Testing on Windows: occt component : Total MEMORY difference: 272956720 / 272536548 Total CPU difference: 42005.0625 / 36968.796875 products component : Total MEMORY difference: 72250036 / 71070524 Total CPU difference: 15926.0625 / 11430.265625 There are no differences in images found by testdiff. |
|
Branch CR25504 has been updated by mkv. SHA-1: 547da89d36ba3e9893bbf1aa4e0dba3d03033854 Detailed log of new commits: Author: mkv Date: Fri Nov 21 09:20:33 2014 +0300 Test case for CR25504 |
|
Branch CR25504 has been deleted by inv. SHA-1: 547da89d36ba3e9893bbf1aa4e0dba3d03033854 |
occt: master c84d6e55 2014-11-21 12:35:44
Committer: bugmaster Details Diff |
0025504: Exception raised during projection curve on surface Avoid moving of projected point to a boundary of surface Test case for CR25504 |
Affected Issues 0025504 |
|
mod - src/ProjLib/ProjLib_PrjResolve.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug25504 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-20 10:25 |
|
New Issue | |
2014-11-20 10:25 |
|
Assigned To | => azv |
2014-11-20 10:25 |
|
File Added: surf | |
2014-11-20 10:25 |
|
File Added: curve | |
2014-11-20 10:36 | git | Note Added: 0034529 | |
2014-11-20 10:36 |
|
Note Added: 0034530 | |
2014-11-20 10:36 |
|
Assigned To | azv => ifv |
2014-11-20 10:36 |
|
Status | new => resolved |
2014-11-20 14:34 |
|
Note Added: 0034553 | |
2014-11-20 14:34 |
|
Assigned To | ifv => bugmaster |
2014-11-20 14:34 |
|
Status | resolved => reviewed |
2014-11-20 14:38 |
|
Assigned To | bugmaster => mkv |
2014-11-21 09:21 |
|
Note Added: 0034571 | |
2014-11-21 09:21 | git | Note Added: 0034572 | |
2014-11-21 09:22 |
|
Test case number | => bugs moddata_3(013) bug25504 |
2014-11-21 09:22 |
|
Assigned To | mkv => bugmaster |
2014-11-21 09:22 |
|
Status | reviewed => tested |
2014-11-25 10:29 | bugmaster | Changeset attached | => occt master c84d6e55 |
2014-11-25 10:29 | bugmaster | Status | tested => verified |
2014-11-25 10:29 | bugmaster | Resolution | open => fixed |
2014-11-28 13:45 | git | Note Added: 0034825 | |
2015-01-19 16:23 | bugmaster | Target Version | 7.0.0 => 6.9.0 |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |