0025504: Exception raised during projection curve on surface

Avoid moving of projected point to a boundary of surface

Test case for CR25504